Port clear selection to strokes framework

Otherwise, there is a deadlock

BUG:408843